Added completed query param and updated the OpenAPI file.
